Update Docker-Steps.md
Walk through these boot strapping steps copied over from my Desktop Stickies.